# gitkraft

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  justfile
.gitea/workflows/: ci.yml  deps-update.yml  release.yml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  deps-update.yml  release.yml
.zed/: rules.md
crates/gitkraft-core/: Cargo.toml  README.md
crates/gitkraft-core/src/: lib.rs
crates/gitkraft-core/src/features/: editor.rs  mod.rs
crates/gitkraft-core/src/features/branches/: mod.rs  ops.rs  types.rs
crates/gitkraft-core/src/features/commits/: actions.rs  mod.rs  ops.rs  types.rs
crates/gitkraft-core/src/features/diff/: blame.rs  mod.rs  ops.rs  types.rs
crates/gitkraft-core/src/features/graph/: mod.rs  ops.rs  types.rs
crates/gitkraft-core/src/features/log/: mod.rs  ops.rs
crates/gitkraft-core/src/features/persistence/: mod.rs  ops.rs  types.rs
crates/gitkraft-core/src/features/remotes/: mod.rs  ops.rs  types.rs
crates/gitkraft-core/src/features/repo/: mod.rs  ops.rs  types.rs  watcher.rs
crates/gitkraft-core/src/features/staging/: mod.rs  ops.rs
crates/gitkraft-core/src/features/stash/: mod.rs  ops.rs  types.rs
crates/gitkraft-core/src/features/theme/: mod.rs  presets.rs  types.rs
crates/gitkraft-core/src/utils/: mod.rs  text.rs  time.rs
crates/gitkraft-gui/: Cargo.toml
crates/gitkraft-gui/examples/vhs/: gui-build.tape  gui-workspace.tape
crates/gitkraft-gui/src/: icons.rs  lib.rs  macros.rs  main.rs  message.rs  state.rs  theme.rs  update.rs  view.rs  view_utils.rs
crates/gitkraft-gui/src/features/: editor.rs  mod.rs
crates/gitkraft-gui/src/features/branches/: commands.rs  update.rs  view.rs
crates/gitkraft-gui/src/features/commits/: commands.rs  update.rs  view.rs
crates/gitkraft-gui/src/features/diff/: commands.rs  update.rs  view.rs
crates/gitkraft-gui/src/features/remotes/: commands.rs  update.rs  view.rs
crates/gitkraft-gui/src/features/repo/: commands.rs  update.rs  view.rs
crates/gitkraft-gui/src/features/staging/: commands.rs  mod.rs  update.rs  view.rs
crates/gitkraft-gui/src/features/stash/: commands.rs  update.rs  view.rs
crates/gitkraft-gui/src/features/theme/: view.rs
crates/gitkraft-gui/src/widgets/: bounded_popup.rs  commit_graph.rs  divider.rs  header.rs  mod.rs  tab_bar.rs
crates/gitkraft-tui/: Cargo.toml
crates/gitkraft-tui/examples/vhs/: tui-build.tape  tui-demo.tape  tui-tabs.tape  tui-themes.tape  tui-welcome.tape
crates/gitkraft-tui/src/: app.rs  events.rs  layout.rs  lib.rs  main.rs  utils.rs
crates/gitkraft-tui/src/features/: mod.rs  skeleton.rs
crates/gitkraft-tui/src/features/branches/: events.rs  view.rs
crates/gitkraft-tui/src/features/commits/: events.rs  view.rs
crates/gitkraft-tui/src/features/diff/: events.rs  view.rs
crates/gitkraft-tui/src/features/editor/: events.rs  view.rs
crates/gitkraft-tui/src/features/options/: events.rs  view.rs
crates/gitkraft-tui/src/features/remotes/: events.rs  mod.rs  view.rs
crates/gitkraft-tui/src/features/repo/: events.rs  view.rs
crates/gitkraft-tui/src/features/staging/: events.rs  view.rs
crates/gitkraft-tui/src/features/stash/: events.rs  view.rs
crates/gitkraft-tui/src/features/theme/: events.rs  palette.rs  view.rs
crates/gitkraft-tui/src/widgets/: header.rs  mod.rs  status_bar.rs
packaging/aur/gitkraft/: .SRCINFO  PKGBUILD
packaging/macos/: README.md  create_dmg.sh
packaging/windows/: README.md  gitkraft.ico.txt  installer.nsi
scripts/: bump_version.nu  check_publish.nu  migrate_to_gitea.nu  release_prepare.nu  setup_gitea.nu  upgrade_deps.nu
scripts/ci/: build_universal_macos.sh  package_appimage.sh  package_linux.nu  package_windows.sh  publish_crate.nu  quality_gate.nu  release_notes.nu  stage_artifacts.nu  update_aur.sh  validate_tag.nu
scripts/tests/: run_all.nu  test_bump_version.nu  test_check_publish.nu  test_publish_crate.nu  test_release_prepare.nu  test_upgrade_deps.nu  test_validate_tag.nu  test_version.nu
