[package]
name = "gitkraft"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GitKraft — Git IDE desktop application (Iced GUI)"
readme = "README.md"
categories = ["gui", "development-tools"]
keywords = ["git", "vcs", "ide", "gui"]

[lib]
name = "gitkraft_gui"
path = "src/lib.rs"

[[bin]]
name = "gitkraft"
path = "src/main.rs"

[dependencies]
gitkraft-core = { workspace = true }
iced       = { workspace = true }
iced_fonts = { version = "0.1", features = ["bootstrap"] }
rfd        = "0.15"
futures       = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde         = { workspace = true }
dirs          = { workspace = true }
